--- a/boards.conf
+++ b/boards.conf
@@ -30,9 +30,51 @@ ipaddr     = 10.66.66.10
 serverip   = 10.66.66.1
 macaddr    = DE:AD:C0:FF:EE:66
 
-# -------------------- netboot config ------------------------
+# -------------------- sdx ------------------------
 
-[generic-netboot]
+# ---- H3 -----
+[sdx-home-h3-odin]
+serialport = /dev/ttyUSB0
+baudrate   = 115200
+
+board      = h3ulcb
+soc        = r8a7795
+bootmode   = net
+
+bootmmc    = 0:1
+ipaddr     = 10.0.0.29 # h3ulcb.homelan.sdx
+serverip   = 10.0.0.15 # odin.homelan.sdx
+macaddr    = 2E:0A:0A:00:87:BE
+
+[sdx-home-h3-thor]
+serialport = /dev/ttyUSB0
+baudrate   = 115200
+
+board      = h3ulcb
+soc        = r8a7795
+bootmode   = net
+
+bootmmc    = 0:1
+ipaddr     = 10.0.0.29 # h3ulcb.homelan.sdx
+serverip   = 10.0.0.11 # thor.homelan.sdx
+macaddr    = 2E:0A:0A:00:87:BE
+
+[sdx-home-h3-freyr]
+serialport = /dev/ttyUSB0
+baudrate   = 115200
+
+board      = h3ulcb
+soc        = r8a7795
+bootmode   = net
+
+bootmmc    = 0:1
+ipaddr     = 10.0.0.29 # h3ulcb.homelan.sdx
+serverip   = 10.0.0.16 # thor.homelan.sdx
+macaddr    = 2E:0A:0A:00:87:BE
+
+# ---- M3 -----
+
+[sdx-home-m3-odin]
 serialport = /dev/ttyUSB0
 baudrate   = 115200
 
@@ -41,7 +83,160 @@ soc        = r8a7796
 bootmode   = net
 
 bootmmc    = 0:1
-ipaddr     = 10.66.66.10
-serverip   = 10.66.66.1
-macaddr    = DE:AD:C0:FF:EE:66
+ipaddr     = 10.0.0.29 # m3ulcb.homelan.sdx
+serverip   = 10.0.0.15 # odin.homelan.sdx
+macaddr    = 2E:0A:0A:00:87:BD
 
+[sdx-home-m3-thor]
+serialport = /dev/ttyUSB0
+baudrate   = 115200
+
+board      = m3ulcb
+soc        = r8a7796
+bootmode   = net
+
+bootmmc    = 0:1
+ipaddr     = 10.0.0.29 # m3ulcb.homelan.sdx
+serverip   = 10.0.0.11 # thor.homelan.sdx
+macaddr    = 2E:0A:0A:00:87:BD
+
+[sdx-home-m3-freyr]
+serialport = /dev/ttyUSB0
+baudrate   = 115200
+
+board      = m3ulcb
+soc        = r8a7796
+bootmode   = net
+
+bootmmc    = 0:1
+ipaddr     = 10.0.0.29 # m3ulcb.homelan.sdx
+serverip   = 10.0.0.16 # thor.homelan.sdx
+macaddr    = 2E:0A:0A:00:87:BD
+
+[sdx-office-m3-iot02]
+serialport = /dev/ttyUSB0
+baudrate   = 115200
+
+board      = m3ulcb
+soc        = r8a7796
+bootmode   = net
+
+bootmmc    = 0:1
+ipaddr     = 10.20.1.77 # m3ulcb01.vannes.iot
+serverip   = 10.20.1.22 # iot02.vannes.iot
+macaddr    = DE:AD:C0:FF:EE:01
+
+[sdx-lorient-m3ulcb01]
+serialport = /dev/ttyUSB0
+baudrate   = 115200
+
+board      = m3ulcb
+soc        = r8a7796
+bootmode   = net
+
+bootmmc    = 0:1
+ipaddr     = 10.18.2.21   # m3ulcb01.lorient.iot
+serverip   = 10.18.252.82 # lor-build-sdx.lorient.iot
+macaddr    = DE:AD:C0:FF:EE:01
+
+[sdx-lorient-h3ulcb01]
+serialport = /dev/ttyUSB0
+baudrate   = 115200
+
+board      = h3ulcb
+soc        = r8a7795
+bootmode   = net
+
+bootmmc    = 0:1
+ipaddr     = 10.18.2.50   # m3ulcb01.lorient.iot
+serverip   = 10.18.252.82 # lor-build-sdx.lorient.iot
+macaddr    = DE:AD:C0:FF:EE:11
+
+[sdx-home-m3-redfish]
+serialport = /dev/ttyUSB1
+baudrate   = 115200
+
+board      = m3ulcb
+soc        = r8a7796
+bootmode   = sdi
+
+bootmmc    = 0:2
+ipaddr     = 10.0.0.29 # m3ulcb.homelan.sdx
+serverip   = 10.0.0.15 # odin.homelan.sdx
+macaddr    = 2E:0A:0A:00:87:BD
+
+# -------------------- Ronan ------------------------
+
+[ronan-m3-local]
+serialport = /dev/ttyUSB0
+baudrate   = 115200
+
+board      = m3ulcb
+soc        = r8a7796
+bootmode   = net
+
+bootmmc    = 0:1
+ipaddr     = 10.66.66.21 # m3ulcb.vannes.iot
+serverip   = 10.66.66.22 # NUC
+macaddr    = F2:8C:8E:FB:A5:9E
+
+
+[ronan-m3]
+serialport = /dev/ttyUSB0
+baudrate   = 115200
+
+board      = m3ulcb
+soc        = r8a7796
+bootmode   = net
+
+bootmmc    = 0:1
+ipaddr     = 10.20.1.79 # m3ulcb03.vannes.iot
+serverip   = 10.20.1.122 # nuc01.vannes.iot
+macaddr    = F2:8C:8E:FB:A5:9E
+
+# -------------------- Seb ------------------------
+[seb-m3]
+serialport = /dev/ttyUSB0
+baudrate   = 115200
+
+board      = m3ulcb
+soc        = r8a7796
+bootmode   = sd
+
+bootmmc    = 0:1
+ipaddr     = 110.20.1.112 # m3ulcb0X.vannes.iot
+serverip   = 10.20.1.122 # nuc01.vannes.iot
+macaddr    = 2E:09:0A:01:98:AF
+
+# -------------------- m3ulcb03 ------------------------
+
+[m3ulcb03]
+serialport = /dev/ttyUSB0
+baudrate   = 115200
+
+board      = m3ulcb
+soc        = r8a7796
+bootmode   = sdi
+
+bootmmc    = 0:2
+ipaddr     = 10.66.66.21 # m3ulcb.vannes.iot
+serverip   = 10.66.66.22 # NUC
+macaddr    = F2:8C:8E:FB:A5:9E
+
+# -------------------- Johann ------------------------
+[m3ulcb06]
+serialport = /dev/ttyUSB1
+baudrate   = 115200
+
+board      = m3ulcb
+soc        = r8a7796
+bootmode   = sd
+
+bootmmc    = 0:1
+ipaddr     = 10.18.0.82   # m3ulcb06.lorient.iot
+serverip   = 10.18.252.82 # lor-build-sdx.lorient.iot
+macaddr    = DE:AD:C0:FF:EE:06
+
+
+# -------------------- user2 ------------------------
+# ...
